--- a/package.json
+++ b/package.json
@@ -12,9 +12,27 @@
         "alpinejs": "^3.4.2",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "daisyui": "^5.0.43",
         "laravel-vite-plugin": "^1.2.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^4.1.10",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "datatables.net-autofill-dt": "^2.7.0",
+        "datatables.net-buttons": "^3.2.3",
+        "datatables.net-buttons-dt": "^3.2.3",
+        "datatables.net-colreorder-dt": "^2.1.1",
+        "datatables.net-dt": "^2.3.2",
+        "datatables.net-fixedcolumns-dt": "^5.0.4",
+        "datatables.net-fixedheader-dt": "^4.0.3",
+        "datatables.net-responsive-dt": "^3.0.4",
+        "datatables.net-rowreorder-dt": "^1.5.0",
+        "datatables.net-scroller-dt": "^2.4.3",
+        "datatables.net-searchbuilder-dt": "^1.8.2",
+        "jquery": "^3.7.1",
+        "jszip": "^3.10.1",
+        "pdfmake": "^0.2.20",
+        "toastr": "^2.1.4"
     }
 }
