--- a/package.json
+++ b/package.json
@@ -30,9 +30,19 @@
         "datatables.net-rowreorder-dt": "^1.5.0",
         "datatables.net-scroller-dt": "^2.4.3",
         "datatables.net-searchbuilder-dt": "^1.8.2",
+        "filepond": "^4.32.8",
+        "filepond-plugin-file-validate-type": "^1.2.9",
+        "filepond-plugin-image-crop": "^2.0.6",
+        "filepond-plugin-image-edit": "^1.6.3",
+        "filepond-plugin-image-exif-orientation": "^1.0.11",
+        "filepond-plugin-image-preview": "^4.6.12",
+        "filepond-plugin-image-resize": "^2.0.10",
+        "filepond-plugin-image-transform": "^3.8.7",
+        "filepond-plugin-image-validate-size": "^1.2.7",
         "jquery": "^3.7.1",
         "jszip": "^3.10.1",
         "pdfmake": "^0.2.20",
+        "sweetalert2": "^11.22.0",
         "toastr": "^2.1.4"
     }
 }
