--- a/package.json
+++ b/package.json
@@ -19,6 +19,42 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-alignment": "^45.2.0",
+        "@ckeditor/ckeditor5-autoformat": "^45.2.0",
+        "@ckeditor/ckeditor5-autosave": "^45.2.0",
+        "@ckeditor/ckeditor5-basic-styles": "^45.2.0",
+        "@ckeditor/ckeditor5-block-quote": "^45.2.0",
+        "@ckeditor/ckeditor5-code-block": "^45.2.0",
+        "@ckeditor/ckeditor5-editor-classic": "^45.2.0",
+        "@ckeditor/ckeditor5-essentials": "^45.2.0",
+        "@ckeditor/ckeditor5-find-and-replace": "^45.2.0",
+        "@ckeditor/ckeditor5-font": "^45.2.0",
+        "@ckeditor/ckeditor5-heading": "^45.2.0",
+        "@ckeditor/ckeditor5-highlight": "^45.2.0",
+        "@ckeditor/ckeditor5-horizontal-line": "^45.2.0",
+        "@ckeditor/ckeditor5-html-embed": "^45.2.0",
+        "@ckeditor/ckeditor5-html-support": "^45.2.0",
+        "@ckeditor/ckeditor5-image": "^45.2.0",
+        "@ckeditor/ckeditor5-indent": "^45.2.0",
+        "@ckeditor/ckeditor5-link": "^45.2.0",
+        "@ckeditor/ckeditor5-list": "^45.2.0",
+        "@ckeditor/ckeditor5-markdown-gfm": "^45.2.0",
+        "@ckeditor/ckeditor5-media-embed": "^45.2.0",
+        "@ckeditor/ckeditor5-mention": "^45.2.0",
+        "@ckeditor/ckeditor5-page-break": "^45.2.0",
+        "@ckeditor/ckeditor5-paragraph": "^45.2.0",
+        "@ckeditor/ckeditor5-paste-from-office": "^45.2.0",
+        "@ckeditor/ckeditor5-remove-format": "^45.2.0",
+        "@ckeditor/ckeditor5-select-all": "^45.2.0",
+        "@ckeditor/ckeditor5-show-blocks": "^45.2.0",
+        "@ckeditor/ckeditor5-source-editing": "^45.2.0",
+        "@ckeditor/ckeditor5-special-characters": "^45.2.0",
+        "@ckeditor/ckeditor5-style": "^45.2.0",
+        "@ckeditor/ckeditor5-table": "^45.2.0",
+        "@ckeditor/ckeditor5-typing": "^45.2.0",
+        "@ckeditor/ckeditor5-ui": "^45.2.0",
+        "@ckeditor/ckeditor5-undo": "^45.2.0",
+        "@ckeditor/ckeditor5-upload": "^45.2.0",
         "datatables.net-autofill-dt": "^2.7.0",
         "datatables.net-buttons": "^3.2.3",
         "datatables.net-buttons-dt": "^3.2.3",
@@ -31,6 +67,7 @@
         "datatables.net-scroller-dt": "^2.4.3",
         "datatables.net-searchbuilder-dt": "^1.8.2",
         "filepond": "^4.32.8",
+        "filepond-plugin-file-validate-size": "^2.2.8",
         "filepond-plugin-file-validate-type": "^1.2.9",
         "filepond-plugin-image-crop": "^2.0.6",
         "filepond-plugin-image-edit": "^1.6.3",
